# libsosimple

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_py  conanfile.py  conanfile.txt  sosimple.pc.in
include/: sosimple.hpp
include/sosimple/: endpoint.hpp  exports.hpp  netheaders.hpp  pending.hpp  platforms.hpp  socket.hpp  utilities.hpp  windows_compat.hpp  worker.hpp
src/: endpoint.cpp  main.cpp  platforms_internal.hpp  socket_impl.cpp  socket_impl.hpp  socket_poller.cpp  socket_poller.hpp  utilities.cpp  watchdog.hpp  windows_compat.cpp  worker_impl.cpp  worker_impl.hpp
